# ngv_reports_ibkr

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  Taskfile.yml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release-please.yml
.trunk/: trunk.yaml
data/: ibkr_flex_report_trades.md  ibkr_tws_realtime_trades_interpreted.md  unified_trades.md
docs/: api.rst
ngv_reports_ibkr/: __init__.py  adapters.py  config_helpers.py  custom_flex_report.py  download_trades.py  dtype_exporter.py  expand_contract_columns.py  flex_client.py  ibkr_tws.py  token_manager.py  transforms.py  unified_df.py
ngv_reports_ibkr/schemas/: ibkr_flex_report.py  ibkr_tws_positions.py  ibkr_tws_trades.py  unified_trades.py
ngv_reports_ibkr/utils/: objects.py
notebooks/: ibkr_flex_report.ipynb  ibkr_tws_positions.ipynb  ibkr_tws_realtime.ipynb  ibkr_unified_df.ipynb  report-categorize.ipynb  test_flex_refactor.ipynb  validate_unified_df.ipynb
prompts/: prompt-ibkr-sample-data.md
tests/: schemas.py  test_download_trades.py  test_extract_object_attributes.py  test_flex_client.py  test_ibkr_tws.py  test_token_manager.py  test_unified_trades.py  test_unified_trades_manual.py
tests/fixtures/: __init__.py
tests/schemas/: test_ibkr_flex_report.py  test_ibkr_tws_trades.py
