[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "ngv_reports_ibkr"
description="IBKR report data via ib_async"
authors = [
    {name = "Weston Platter", email = "westonplatter+finx@gmail.com"},
]
dependencies = [
    "ib-async",
    "loguru",
    "pandas",
    "numpy",
    "pydantic",
    "python-dotenv",
    "pytz",
    "requests",
]
requires-python = ">=3.10"
license = {text = "BSD-3"}
dynamic = ["version"]
readme = "README.md"


[tool.setuptools.dynamic]
version = {attr = "ngv_reports_ibkr.VERSION"}


[tool.setuptools.packages.find]
include = ['ngv_reports_ibkr*']
 

[project.urls]
Homepage = "https://github.com/westonplatter/ngv-reports-ibkr"
"Issue Tracker" = "https://github.com/westonplatter/ngv-reports-ibkr/issues"
"Source Code" = "https://github.com/westonplatter/ngv-reports-ibkr"


[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "ipdb",
    "matplotlib",
    "twine",
    "openpyxl",
    "dotenv",
     "pytest>=7.5",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst_parser",
]
